# learning_helpful_humans

./: .gitignore  CMakeLists.txt  README.md  package.xml
asker_learning_agent/: CMakeLists.txt  package.xml  setup.py
asker_learning_agent/scripts/: __config__.py  agent
asker_learning_agent/scripts/agents/: random_agent.py  sarsa_agent.py
asker_learning_agent/scripts/firebase_scripts/: log_data.py  training_data.py  travel_data.py
asker_learning_agent/scripts/mdp/: states.py
config/: locations.json  locations.json.backup  locations.yml
data/: pose_db.txt
include/learning_helpful_humans/: Question.h  bytestream.h
include/learning_helpful_humans/imagetool/: DatabaseImage.h  ImageMetadata.h  ImagePickerPolicy.h  RandomImagePolicy.h
include/learning_helpful_humans/locations/: AskLocation.hpp  CorridorLocation.hpp  LabLocation.hpp  OfficeLocation.hpp
include/learning_helpful_humans/offline/: ImageCache.h
include/learning_helpful_humans/request/: GetFieldValue.h  GetImage.h  PostFieldValue.h  PostImageRequest.h
include/learning_helpful_humans/requests/: PostImageRequest.h
launch/: ask.launch
learning_helpful_humans/: CMakeLists.txt  package.xml
learning_helpful_humans/config/: locations.yml
learning_helpful_humans/data/: psoe_locations.txt
learning_helpful_humans/include/learning_helpful_humans/: Fl_ViewerCV.h  bytestream.h
learning_helpful_humans/include/learning_helpful_humans/imagetool/: ImagePickerPolicy.h  RandomImagePolicy.h
learning_helpful_humans/include/learning_helpful_humans/locations/: LabLocation.hpp
learning_helpful_humans/include/learning_helpful_humans/request/: AppendFieldValue.h  GetFieldValue.h  TimeoutException.h
learning_helpful_humans/launch/: ask.launch  ask_collect.launch  travel.launch
learning_helpful_humans/scripts/: stop_here
learning_helpful_humans/src/: Question.cpp  image_asker_node.cpp  location_asker_node.cpp  location_selector_node.cpp  record_data_agent.cpp  record_image_data.cpp
learning_helpful_humans/src/imagetool/: ImageMetadata.cpp  RandomImagePolicy.cpp
learning_helpful_humans/src/locations/: CorridorLocation.cpp  LabLocation.cpp
learning_helpful_humans/src/offline/: ImageCache.cpp
learning_helpful_humans/src/request/: GetFieldValue.cpp  GetImage.cpp
learning_helpful_humans/test/: image_asker_node_tester.cpp
scripts/: colect_costs.py  collect_costs  stop_here
src/: Fl_ViewerCV.cxx  Question.cpp  ask_location_node.cpp  ask_location_node_tester.cpp  ask_people_node.cpp  collect_costs.cpp  image_asker_node.cpp  image_asker_node_tester.cpp  image_tool_node.cpp  location_asker_node.cpp  location_selector_node.cpp  logging_utils.h  nav_utils.h  record_data_agent.cpp  record_image_data.cpp
src/imagetool/: DatabaseImage.cpp  ImageMetadata.cpp  ImagePickerPolicy.cpp  RandomImagePolicy.cpp
src/locations/: AskLocation.cpp  CorridorLocation.cpp  LabLocation.cpp  OfficeLocation.cpp
src/offline/: .kdev_include_paths  ImageCache.cpp
src/request/: AppendFieldValue.cpp  GetFieldValue.cpp  GetImage.cpp  PostFieldValue.cpp  PostImageRequest.cpp  TimeoutException.cpp
test/: image_asker_node_tester.cpp  image_fetch_tester.cpp  image_uploader_test.cpp
