<?xml version="1.0"?>
<package>
  <name>asker_learning_agent</name>
  <version>0.0.0</version>
  <description>The asker_learning_agent package</description>

  <maintainer email="jsinapov@gmail.com">Jivko Sinapov</maintainer>
  <maintainer email="ricardo.delfin.garcia@gmail.com">Ricardo Delfin Garcia</maintainer>


  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>learning_helpful_humans</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>learning_helpful_humans</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>pyrebase-pip</run_depend>

  <export>

  </export>
</package>
